<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OnboardActivity">

        <ImageView
            style="@style/background"
            android:layout_marginStart="31dp"
            android:layout_marginTop="-60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/background_blue" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_marginStart="175dp"
            android:layout_marginTop="259dp"
            android:elevation="4dp"
            android:src="@drawable/image_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="103dp"
            android:layout_height="103dp"
            android:layout_marginStart="249dp"
            android:layout_marginBottom="16dp"
            android:elevation="4dp"
            android:src="@drawable/image_2"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="342dp"
            android:layout_height="190dp"
            android:layout_marginStart="33dp"
            android:layout_marginTop="90dp"
            android:fontFamily="@font/inter_extra_bold_800"
            android:includeFontPadding="false"
            android:lineSpacingExtra="-16sp"
            android:text="@string/get_started"
            android:textColor="?android:textColorPrimary"
            android:textSize="75sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:layout_width="143dp"
            android:layout_height="26dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="164dp"
            android:fontFamily="@font/inter_medium_500"
            android:text="@string/grow_together"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btJoinNow"
            style="@style/button"
            android:layout_width="281dp"
            android:layout_height="62dp"
            android:layout_marginTop="46dp"
            android:layout_marginBottom="48dp"
            android:text="@string/join_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>